# colconv

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md  build.rs
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  loc.yml
benches/: ayuv64_a_plus_combo.rs  bayer16_to_rgb.rs  bayer_to_rgb.rs  bgr24_to_rgb.rs  fused_downscale.rs  gbrap_to_rgba.rs  gbrp12_to_rgb.rs  gbrp_to_rgb.rs  gbrpf32_to_rgb.rs  gray16_to_rgb.rs  gray8_to_rgb.rs  grayf32_to_rgb.rs  monoblack_to_rgb.rs  nv12_to_rgb.rs  nv16_to_rgb.rs  nv21_to_rgb.rs  nv24_to_rgb.rs  nv42_to_rgb.rs  p010_to_rgb.rs  p012_to_rgb.rs  p016_to_rgb.rs  p210_to_rgb.rs  p212_to_rgb.rs  p216_to_rgb.rs  p410_to_rgb.rs  p412_to_rgb.rs  p416_to_rgb.rs  pal8_simd.rs  rgb24_to_luma.rs  rgb48_to_rgb.rs  rgb565_to_rgb.rs  rgb_to_hsv.rs  rgba64_to_rgba.rs  rgba_to_luma.rs  rgbf16_to_rgb.rs  rgbf32_to_rgb.rs  uyvy422_to_rgb.rs  uyyvyy411_to_rgb.rs  v210_to_rgb.rs  v30x_to_rgb.rs  (+35 more)
ci/: gen_cv2_goldens.py  gen_pil_goldens.py  miri_sb.sh  miri_tb.sh  sanitizer.sh
examples/: derive_oetf_polynomial.rs  derive_xyz_matrices.rs
src/: frame.rs  lib.rs
src/frame/: bayer.rs  gray.rs  legacy_rgb.rs  mod.rs  mono1bit.rs  packed_rgb_10bit.rs  packed_rgb_16bit.rs  packed_rgb_8bit.rs  packed_rgb_f16.rs  packed_rgb_float.rs  packed_yuv_4_1_1.rs  packed_yuv_4_4_4.rs  packed_yuv_8bit.rs  pal8.rs  planar_8bit.rs  planar_gbr_8bit.rs  planar_gbr_float.rs  planar_gbr_high_bit.rs  semi_planar_8bit.rs  subsampled_high_bit_planar.rs  subsampled_high_bit_pn.rs  tests.rs  v210.rs  xyz12.rs  y2xx.rs
src/frame/tests/: grayf32.rs  legacy_rgb.rs  mod.rs  mono1bit.rs  packed_rgb_10bit.rs  packed_rgb_16bit.rs  packed_rgb_f16.rs  packed_rgb_float.rs  packed_yuv_4_4_4.rs  pal8.rs  planar_8bit.rs  planar_gbr_float.rs  planar_gbr_high_bit.rs  subsampled_4_2_0_high_bit.rs  subsampled_4_2_2_high_bit.rs  subsampled_4_4_4_high_bit.rs  v210.rs  xyz12.rs  y2xx.rs  ya16.rs  ya8.rs  yuva_high_bit.rs
src/frame/yuva/: sub_4_2_0.rs  sub_4_2_2.rs  sub_4_4_4.rs
src/raw/: bayer.rs  bayer16.rs  mod.rs  pal8.rs  types.rs
src/raw/bayer/: tests.rs
src/raw/bayer16/: tests.rs
src/raw/types/: tests.rs
src/resample/: cv2_goldens.rs  mod.rs  tests.rs
src/resample/filter/: mod.rs  stream.rs  tests.rs
src/resample/strategy/: mod.rs  tests.rs  transfer.rs
src/row/: mod.rs  scalar.rs
src/row/arch/: mod.rs  neon.rs  wasm_simd128.rs  x86_avx2.rs  x86_avx512.rs  x86_common.rs  x86_sse41.rs
src/row/arch/neon/: alpha_extract.rs  area_reduce.rs  ayuv64.rs  endian.rs  filter_reduce.rs  gray.rs  hsv.rs  legacy_rgb.rs  miri_compat.rs  mod.rs  mono1bit.rs  packed_rgb.rs  packed_rgb_16bit.rs  packed_rgb_32bit.rs  packed_rgb_float.rs  packed_yuv_4_1_1.rs  packed_yuv_8bit.rs  pal8.rs  planar_gbr.rs  planar_gbr_32bit.rs  planar_gbr_float.rs  planar_gbr_high_bit.rs  planar_gbr_msb.rs  semi_planar_8bit.rs  subsampled_high_bit_pn_4_2_0.rs  subsampled_high_bit_pn_4_4_4.rs  tests.rs  v210.rs  v30x.rs  v410.rs  vuya.rs  xv36.rs  xv48.rs  xyz12.rs  y216.rs  y2xx.rs  y_plane_to_luma_u16.rs  yuv_planar_16bit.rs  yuv_planar_8bit.rs  yuv_planar_high_bit.rs
src/row/arch/wasm_simd128/: alpha_extract.rs  area_reduce.rs  ayuv64.rs  endian.rs  filter_reduce.rs  gray.rs  hsv.rs  legacy_rgb.rs  mod.rs  mono1bit.rs  packed_rgb.rs  planar_gbr.rs  (+26 more)
src/row/dispatch/: alpha_extract.rs  area_reduce.rs  ayuv.rs  ayuv64.rs  bayer.rs  be_yuv_hb_parity_tests.rs  filter_reduce.rs  gray.rs  grayf16.rs  grayf32.rs  legacy_rgb.rs  mod.rs  mono1bit.rs  nv.rs  nv20.rs  packed_rgb_16bit.rs  packed_rgb_32bit.rs  packed_yuv411.rs  packed_yuv422.rs  pal8.rs  planar_gbr.rs  planar_gbr_32bit.rs  planar_gbr_float.rs  planar_gbr_high_bit.rs  planar_gbr_msb.rs  pn.rs  rgb_f16_ops.rs  rgb_float_ops.rs  rgb_ops.rs  uyva.rs  v210.rs  v30x.rs  v410.rs  vuya.rs  vuyx.rs  vyu444.rs  xv36.rs  xv48.rs  xyz12.rs  y210.rs  (+9 more)
src/row/scalar/: alpha_extract.rs  area_reduce.rs  ayuv64.rs  bayer.rs  filter_reduce.rs  gray.rs  grayf32.rs  hsv.rs  legacy_rgb.rs  mod.rs  mono1bit.rs  packed_rgb.rs  packed_rgb_16bit.rs  packed_rgb_float.rs  packed_yuv_4_1_1.rs  packed_yuv_8bit.rs  pal8.rs  planar_gbr.rs  planar_gbr_f16.rs  planar_gbr_float.rs  planar_gbr_high_bit.rs  rgb_expand.rs  semi_planar_8bit.rs  subsampled_high_bit_pn.rs  tests.rs  v210.rs  v30x.rs  v410.rs  vuya.rs  xv36.rs  xv48.rs  xyz12.rs  xyz12_constants.rs  y216.rs  y2xx.rs  y_plane_to_luma_u16.rs  ya16.rs  ya8.rs  yuv_planar_16bit.rs  yuv_planar_8bit.rs  (+1 more)
src/sinker/: mixed.rs  mod.rs
src/sinker/mixed/: ayuv.rs  ayuv64.rs  bayer.rs  chroma_reconstruct.rs  gray.rs  legacy_rgb.rs  mod.rs  mono1bit.rs  packed_rgb_10bit.rs  packed_rgb_16bit.rs  packed_rgb_32bit.rs  packed_rgb_8bit.rs  packed_rgb_f16.rs  packed_rgb_float.rs  packed_yuv_4_1_1.rs  packed_yuv_8bit.rs  pal8.rs  planar_8bit.rs  planar_gbr_32bit.rs  planar_gbr_8bit.rs  planar_gbr_f16.rs  planar_gbr_float.rs  planar_gbr_high_bit.rs  planar_gbr_msb.rs  planar_high_bit_native.rs  planar_resample.rs  rfc238_poc.rs  semi_planar_8bit.rs  subsampled_4_2_0_high_bit.rs  subsampled_4_2_2_high_bit.rs  subsampled_4_4_4_high_bit.rs  tests.rs  uyva.rs  v210.rs  v30x.rs  v410.rs  vuya.rs  vuyx.rs  vyu444.rs  xv36.rs  (+8 more)
src/source/: abgr.rs  argb.rs  bgr444.rs  bgr48.rs  bgr555.rs  bgr565.rs  bgra.rs  bgra64.rs  bgrx.rs  gbrp.rs  gbrpf16.rs  gbrpf32.rs  gray10.rs  gray12.rs  gray14.rs  gray16.rs  mod.rs  monowhite.rs  nv12.rs  nv16.rs  nv42.rs  p212.rs  rgb24.rs  rgb555.rs  rgba.rs  rgbf16.rs  rgbx.rs  uyvy422.rs  uyyvyy411.rs  v210.rs  v30x.rs  v410.rs  vuyx.rs  walker_macro.rs  xbgr.rs  xv36.rs  ya16.rs  yuv420p.rs  yuv420p12.rs  yuv422p12.rs  (+16 more)
src/walker/: mod.rs  tests.rs
src/yuv/: abgr.rs  argb.rs  ayuv64.rs  bgr24.rs  bgr444.rs  bgr48.rs  bgr555.rs  bgr565.rs  bgra.rs  bgra64.rs  bgrx.rs  gbrap.rs  gbrap10.rs  gbrap12.rs  gbrap14.rs  gbrap16.rs  gbrap9.rs  gbrapf16.rs  gbrapf32.rs  gbrp.rs  gbrp10.rs  gbrp12.rs  gbrp14.rs  gbrp16.rs  gbrp9.rs  gbrpf16.rs  gbrpf32.rs  gray10.rs  gray12.rs  gray14.rs  gray16.rs  gray8.rs  gray9.rs  grayf32.rs  mod.rs  monoblack.rs  monowhite.rs  nv12.rs  nv16.rs  nv21.rs  (+78 more)
(+519 files in other folders)
