[package]
name = "colconv"
version = "0.23.0"
edition = "2024"
repository = "https://github.com/findit-ai/colconv"
homepage = "https://github.com/findit-ai/colconv"
documentation = "https://docs.rs/colconv"
description = "SIMD-dispatched color-conversion kernels covering the FFmpeg AVPixelFormat space, with a Sink-based API so consumers pick which derived outputs (RGB / Luma / HSV / custom) they want without paying for the ones they don't."
license = "GPL-3.0-or-later"
rust-version = "1.95.0"

[lib]
# `cargo bench` without this setting builds and runs the lib's `#[test]`
# harness alongside the real bench targets; that harness rejects
# `--output-format bencher` and breaks CI. We don't have any `#[bench]`
# attributes in the lib anyway, so opt out of benchmarking it.
bench = false

[[bench]]
name = "yuv_420_to_rgb"
harness = false

[[bench]]
name = "nv12_to_rgb"
harness = false

[[bench]]
name = "nv16_to_rgb"
harness = false

[[bench]]
name = "nv21_to_rgb"
harness = false

[[bench]]
name = "nv24_to_rgb"
harness = false

[[bench]]
name = "nv42_to_rgb"
harness = false

[[bench]]
name = "yuv_420p10_to_rgb"
harness = false

[[bench]]
name = "yuv_420p12_to_rgb"
harness = false

[[bench]]
name = "yuv_420p14_to_rgb"
harness = false

[[bench]]
name = "yuv_420p16_to_rgb"
harness = false

[[bench]]
name = "p010_to_rgb"
harness = false

[[bench]]
name = "p012_to_rgb"
harness = false

[[bench]]
name = "p016_to_rgb"
harness = false

[[bench]]
name = "yuv_422p_to_rgb"
harness = false

[[bench]]
name = "yuv_422p10_to_rgb"
harness = false

[[bench]]
name = "yuv_422p12_to_rgb"
harness = false

[[bench]]
name = "yuv_422p14_to_rgb"
harness = false

[[bench]]
name = "yuv_422p16_to_rgb"
harness = false

[[bench]]
name = "yuv_444p_to_rgb"
harness = false

[[bench]]
name = "yuv_444p10_to_rgb"
harness = false

[[bench]]
name = "yuv_444p12_to_rgb"
harness = false

[[bench]]
name = "yuv_444p14_to_rgb"
harness = false

[[bench]]
name = "yuv_444p16_to_rgb"
harness = false

[[bench]]
name = "p210_to_rgb"
harness = false

[[bench]]
name = "p212_to_rgb"
harness = false

[[bench]]
name = "p216_to_rgb"
harness = false

[[bench]]
name = "p410_to_rgb"
harness = false

[[bench]]
name = "p412_to_rgb"
harness = false

[[bench]]
name = "p416_to_rgb"
harness = false

[[bench]]
name = "rgb_to_hsv"
harness = false

[[bench]]
name = "vuya_a_plus_combo"
harness = false

[[bench]]
name = "ayuv64_a_plus_combo"
harness = false

[[bench]]
name = "yuva_4_2_0_a_plus_combo"
harness = false

[[bench]]
name = "yuva_4_2_2_a_plus_combo"
harness = false

[[bench]]
name = "yuva_4_4_4_a_plus_combo"
harness = false

[[bench]]
name = "pal8_simd"
harness = false

[features]
default = ["std", "frame"]
alloc = ["libm", "videoframe/alloc"]
std = ["thiserror/default", "videoframe/std"]

# Umbrella — enables every per-family sub-feature below (mirrors
# videoframe's `frame` umbrella). Activates videoframe's frame umbrella
# and every colconv per-family feature so the internal sinker / row /
# dispatch / SIMD-backend modules for every format are compiled in.
frame = [
  "videoframe/frame",
  "yuv-planar",
  "yuv-semi-planar",
  "yuva",
  "yuv-packed",
  "yuv-444-packed",
  "y2xx",
  "v210",
  "rgb",
  "rgb-float",
  "rgb-legacy",
  "gbr",
  "gray",
  "bayer",
  "xyz",
  "mono",
]

# Per-family pass-throughs. Each colconv feature activates the
# matching videoframe feature so frame types and source markers for
# that family are available, AND gates colconv's internal sinker /
# row / dispatch / SIMD-backend modules for the format-specific code.
# Cross-format helpers (Q15 ranges, rgb_expand, hsv, raw::types,
# alpha_extract, y_plane_to_luma_u16) stay always-available.
yuv-planar      = ["videoframe/yuv-planar"]
yuv-semi-planar = ["videoframe/yuv-semi-planar"]
# YUVA shares 4:2:0 / 4:2:2 / 4:4:4 planar kernels with the
# `yuv-planar` family (4-plane buffers, drop or pass the alpha
# plane through the same `yuv_*p*_to_rgba_with_alpha_src_row`
# kernels). Auto-enable `yuv-planar` so the underlying SIMD /
# scalar primitives compile.
yuva            = ["videoframe/yuva", "yuv-planar"]
yuv-packed      = ["videoframe/yuv-packed"]
yuv-444-packed  = ["videoframe/yuv-444-packed"]
y2xx            = ["videoframe/y2xx"]
v210            = ["videoframe/v210"]
rgb             = ["videoframe/rgb"]
rgb-float       = ["videoframe/rgb-float"]
rgb-legacy      = ["videoframe/rgb-legacy"]
gbr             = ["videoframe/gbr"]
gray            = ["videoframe/gray"]
bayer           = ["videoframe/bayer"]
xyz             = ["videoframe/xyz"]
mono            = ["videoframe/mono"]

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display", "is_variant", "try_unwrap", "unwrap"] }
half = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
libm = { version = "0.2", optional = true }
videoframe = { version = "0.2", default-features = false }

[dev-dependencies]
tempfile = "3"

# Criterion pulls in rayon, which doesn't build for the wasm32‑wasi*
# targets we use to run the simd128 backends under wasmtime. Gate it
# to non‑wasm hosts — benches never run on wasm anyway (they need
# system threading / timing that the wasi runner doesn't expose).
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.8"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  # Testing / coverage helpers. These are set via `RUSTFLAGS='--cfg ...'`
  # in CI to force the dispatcher down a specific path so lower‑tier
  # kernels and the scalar fallback get coverage on runners that would
  # otherwise always pick the top tier.
  'cfg(colconv_force_scalar)',
  'cfg(colconv_disable_avx512)',
  'cfg(colconv_disable_avx2)',
] }
